# Melodist

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: release-checklist.md
figma-handoff/: README.md  component-inventory.md  figma-build-prompt.md  import-checklist.md  tokens.json
scripts/: collect-release-assets.mjs  create-smoke-library.mjs  verify-smoke-library.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs  types.rs
src-tauri/src/audio/: engine.rs  mod.rs  output.rs
src-tauri/src/commands/: library.rs  lyrics.rs  mod.rs  player.rs  settings.rs
src-tauri/src/cover/: extractor.rs  mod.rs
src-tauri/src/lyrics/: lrc.rs  mod.rs
src/hooks/: useGlobalMediaShortcuts.test.ts  useGlobalMediaShortcuts.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLibraryDragDrop.ts
src/lib/: i18n.ts  librarySearch.test.ts  librarySearch.ts  queue.test.ts  queue.ts  scanResult.test.ts  scanResult.ts  tauri.ts  time.test.ts  time.ts  trackList.test.ts  trackList.ts
src/stores/: libraryStore.ts  lyricsStore.ts  playerStore.ts  settingsStore.ts  toastStore.test.ts  toastStore.ts  uiStore.ts
src/styles/: globals.css
stitch_melodist_desktop_interface_design/component_system_overview/: code.html
stitch_melodist_desktop_interface_design/melodist/: DESIGN.md
(+9 files in other folders)
