[package]
name = "melodist"
version = "0.1.0"
description = "Local-first desktop music player"
authors = ["MetaPure Lab"]
license = "MIT"
edition = "2021"

[lib]
name = "melodist_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-store = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
symphonia = { version = "0.5", features = ["all"] }
rodio = { version = "0.17", default-features = false, features = ["symphonia-all"] }
cpal = "0.15"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
lofty = "0.21"
whisper-rs = { version = "0.11", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
parking_lot = "0.12"
once_cell = "1"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
base64 = "0.22"
blake3 = "1"
tauri-plugin-dialog = "=2.0.0"
tauri-plugin-global-shortcut = "=2.0.0"

[features]
default = []
ai = ["whisper-rs", "reqwest"]
